part1/1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-vol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-vol
  template:
    metadata:
      labels:
        app: random-vol
    spec:
      volumes: # Define volume
        - name: local-volume
          emptyDir: {}
      containers:
        - name: random-creator
          image: epylkkan/training_kubernetes_devops:110creator
          volumeMounts: # Mount volume
          - name: local-volume
            mountPath: /usr/src/app/files
        - name: random-reader
          image: epylkkan/training_kubernetes_devops:110reader
          volumeMounts: # Mount volume
          - name: local-volume
            mountPath: /usr/src/app/files
