part1/1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-vol-svc
spec:
  type: ClusterIP
  selector:
    app: random-vol
  ports:
    - port: 2345
      name: random
      protocol: TCP
      targetPort: 3000
