part1/1.10/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-vol-app
spec:
  rules:
  - http:
      paths:
      - path: /random
        backend:
          serviceName: random-vol-svc
          servicePort: 2345
